# qc-builder-api

./: README.md  alembic.ini  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 001_add_task_environment.py
app/api/: deps.py
app/api/v1/: projects.py  roadmap.py  router.py  tasks.py  templates.py
app/core/: config.py  database.py  logging.py
app/db/: session.py
app/mock_db/: qc_builder_mock_db.sqlite3
app/models/db/: __init__.py  project.py  roadmap.py  task.py  template.py
app/models/schemas/: project.py  roadmap.py  task.py  template.py
app/repositories/: project_repo.py  roadmap_repo.py  task_repo.py  template_repo.py
app/seed/: seed_executive_roadmap.py  seed_production_environment_tasks.py  seed_web_team_template.py
